--- a/login.html
+++ b/login.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Login</title>
+    <title>Вход</title>
+    
   </head>
-  <body >
-    <form action class="admin__form">
-      <h1 class="admin__title">Админ-панель</h1>
-      <input type="text" placeholder="Логин" class="admin__form-input">
-      <input type="text" placeholder="Пароль" class="admin__form-input">
-      <button class="admin__form-button" type="submit"></button>
+  <body class="login">
+    <form action class="login__form">
+      <h1 class="login__title">Админ-панель</h1>
+      <input type="text" placeholder="Логин" class="login__form-input">
+      <input type="text" placeholder="Пароль" class="login__form-input">
+      <button class="login__form-button" type="submit">Войти</button>
     </form>
   </body>
 </html>
