--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
-    <script src="./js/scripts.js" defer></script>
+    <script src="./js/images.js" defer></script>
+    <script src="./js/comments.js" defer></script>
     <link rel="icon" href="./assets/icon.svg" type="image/svg+xml">
 
     <title>Profi-Lift</title>
@@ -200,114 +201,7 @@
           <h1 class="feedback__title">Ваши отзывы: </h1>
           <div class="feedback__comment-slider">
             <div class="feedback__comment-line" id="commentContainer">
-              <div class="feedback__comment-line-block">
-                <div class="feedback__comment-line-block-header">
-                  <p class="feedback__comment-line-block-header-name">Иванов
-                    Алексей
-                    Сергеевич</p>
-                  <p
-                    class="feedback__comment-line-block-header-date">12.01.2025</p>
-                </div>
-                <p class="feedback__comment-line-block-text">Отличная работа!
-                  Компания 'Профи-Лифт' показала высокий профессионализм и
-                  оперативность. Спасибо за сотрудничество!</p>
-              </div>
-              <div class="feedback__comment-line-block">
-                <div class="feedback__comment-line-block-header">
-                  <p class="feedback__comment-line-block-header-name">Иванов
-                    Алексей
-                    Сергеевич</p>
-                  <p
-                    class="feedback__comment-line-block-header-date">12.01.2025</p>
-                </div>
-                <p class="feedback__comment-line-block-text">Отличная работа!
-                  Компания 'Профи-Лифт' показала высокий профессионализм и
-                  оперативность. Спасибо за сотрудничество!</p>
-              </div>
-              <div class="feedback__comment-line-block">
-                <div class="feedback__comment-line-block-header">
-                  <p class="feedback__comment-line-block-header-name">Иванов
-                    Алексей
-                    Сергеевич</p>
-                  <p
-                    class="feedback__comment-line-block-header-date">12.01.2025</p>
-                </div>
-                <p class="feedback__comment-line-block-text">Отличная работа!
-                  Компания 'Профи-Лифт' показала высокий профессионализм и
-                  оперативность. Спасибо за сотрудничество!</p>
-              </div>
-              <div class="feedback__comment-line-block">
-                <div class="feedback__comment-line-block-header">
-                  <p class="feedback__comment-line-block-header-name">Иванов
-                    Алексей
-                    Сергеевич</p>
-                  <p
-                    class="feedback__comment-line-block-header-date">12.01.2025</p>
-                </div>
-                <p class="feedback__comment-line-block-text">Отличная работа!
-                  Компания 'Профи-Лифт' показала высокий профессионализм и
-                  оперативность. Спасибо за сотрудничество!</p>
-              </div>
-              <div class="feedback__comment-line-block">
-                <div class="feedback__comment-line-block-header">
-                  <p class="feedback__comment-line-block-header-name">Иванов
-                    Алексей
-                    Сергеевич</p>
-                  <p
-                    class="feedback__comment-line-block-header-date">12.01.2025</p>
-                </div>
-                <p class="feedback__comment-line-block-text">Отличная работа!
-                  Компания 'Профи-Лифт' показала высокий профессионализм и
-                  оперативность. Спасибо за сотрудничество!</p>
-              </div>
-              <div class="feedback__comment-line-block">
-                <div class="feedback__comment-line-block-header">
-                  <p class="feedback__comment-line-block-header-name">Иванов
-                    Алексей
-                    Сергеевич</p>
-                  <p
-                    class="feedback__comment-line-block-header-date">12.01.2025</p>
-                </div>
-                <p class="feedback__comment-line-block-text">Отличная работа!
-                  Компания 'Профи-Лифт' показала высокий профессионализм и
-                  оперативность. Спасибо за сотрудничество!</p>
-              </div>
-              <div class="feedback__comment-line-block">
-                <div class="feedback__comment-line-block-header">
-                  <p class="feedback__comment-line-block-header-name">Иванов
-                    Алексей
-                    Сергеевич</p>
-                  <p
-                    class="feedback__comment-line-block-header-date">12.01.2025</p>
-                </div>
-                <p class="feedback__comment-line-block-text">Отличная работа!
-                  Компания 'Профи-Лифт' показала высокий профессионализм и
-                  оперативность. Спасибо за сотрудничество!</p>
-              </div>
-              <div class="feedback__comment-line-block">
-                <div class="feedback__comment-line-block-header">
-                  <p class="feedback__comment-line-block-header-name">Иванов
-                    Алексей
-                    Сергеевич</p>
-                  <p
-                    class="feedback__comment-line-block-header-date">12.01.2025</p>
-                </div>
-                <p class="feedback__comment-line-block-text">Отличная работа!
-                  Компания 'Профи-Лифт' показала высокий профессионализм и
-                  оперативность. Спасибо за сотрудничество!</p>
-              </div>
-              <div class="feedback__comment-line-block">
-                <div class="feedback__comment-line-block-header">
-                  <p class="feedback__comment-line-block-header-name">Иванов
-                    Алексей
-                    Сергеевич</p>
-                  <p
-                    class="feedback__comment-line-block-header-date">12.01.2025</p>
-                </div>
-                <p class="feedback__comment-line-block-text">Отличная работа!
-                  Компания 'Профи-Лифт' показала высокий профессионализм и
-                  оперативность. Спасибо за сотрудничество!</p>
-              </div>
+              
               <div class="feedback__comment-line-block">
                 <div class="feedback__comment-line-block-header">
                   <p class="feedback__comment-line-block-header-name">Иванов
