--- a/client/admin.html
+++ b/client/admin.html
@@ -9,12 +9,13 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet">
     <title> Админ панель</title>
+
     <link rel="stylesheet" href="./styles.css">
-    <!-- <script src="./js/admin.js" defer></script> -->
+    <script src="./api/checkAPI.JS" defer></script>
     <script src="./api/imageAPI.js" defer></script>
     <script src="./api/commentAPI.js" defer></script>
   </head>
-  <body>
+  <body class="admin">
     <div class="admin__container">
       <div class="admin__add-images">
         <h1 class="admin__add-images-title">Добавить изображение</h2>
